--- a/index.html
+++ b/index.html
@@ -1,13 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>My Personal Site</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Simple Box Model Page</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Add your HTML content here -->
-   <h1>This is an h1</h1>
-   <h5>This is an h5</h5>
+
+  <!-- Hero Section -->
+  <section id="hero">
+    <h1>Welcome to BoxModel Co.</h1>
+    <p>Building pixel-perfect, box-modeled layouts since 1999.</p>
+  </section>
+
+  <!-- Mission Section -->
+  <section id="mission">
+    <h2>Our Mission</h2>
+    <p>
+      We strive to deliver handcrafted, semantically clean websites that honor the principles of classic box-model CSS design. Whether it's a single-page site or a full platform, our mission is to keep things elegant and efficient.
+    </p>
+  </section>
+
+  <!-- Skills Section -->
+  <section id="skills">
+    <h2>Our Skills</h2>
+    <div class="skills-list">
+      <div class="skill-box">
+        <div>
+          <img src="img/laptop.jpg" alt="">
+        </div>
+      </div>
+      <div class="skill-box">CSS3</div>
+      <div class="skill-box">JavaScript</div>
+      <div class="skill-box">Accessibility</div>
+      <div class="skill-box">Responsive Design</div>
+    </div>
+  </section>
+
 </body>
 </html>
